--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-plugin-emotion": "4.3.2",
     "gatsby-plugin-feed": "2.5.3",
     "gatsby-plugin-global-styles": "^1.0.17",
-    "gatsby-plugin-google-analytics": "2.3.2",
+    "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-postcss": "2.3.2",
     "gatsby-plugin-react-helmet": "3.3.2",
     "gatsby-plugin-sharp": "2.6.9",
