--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,3 +1,11 @@
+- id: Naoya
+  avatar: avatars/ghost.png
+  bio: The site owner
+  twitter:
+  facebook:
+  website:
+  location: Brisbane
+  profile_image: img/alex-knight-326705-unsplash.jpg
 - id: Ghost
   avatar: avatars/ghost.png
   bio: The professional publishing platform
@@ -6,14 +14,6 @@
   website: https://ghost.org/
   location: San Francisco
 - id: Another Author
-  avatar: avatars/ghost.png
-  bio: This is another test author with a profile background image
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
-  location: San Francisco
-  profile_image: img/alex-knight-326705-unsplash.jpg
-- id: Naoya
   avatar: avatars/ghost.png
   bio: This is another test author with a profile background image
   twitter: TryGhost
