--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "emotion-server": "10.0.27",
     "gatsby": "2.22.11",
     "gatsby-image": "2.4.5",
+    "gatsby-plugin-breadcrumb": "^10.0.0",
     "gatsby-plugin-canonical-urls": "2.3.2",
     "gatsby-plugin-emotion": "4.3.2",
     "gatsby-plugin-feed": "2.5.3",
@@ -30,6 +31,7 @@
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-postcss": "2.3.2",
     "gatsby-plugin-react-helmet": "3.3.2",
+    "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sharp": "2.6.9",
     "gatsby-plugin-sitemap": "2.4.3",
     "gatsby-plugin-typescript": "2.4.3",
