--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "16.13.1",
     "react-emotion": "10.0.0",
     "react-helmet": "6.0.0",
+    "react-icons": "^3.10.0",
     "rehype-react": "5.0.1"
   },
   "devDependencies": {
