--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -3,6 +3,6 @@
   bio: The site owner
   twitter:
   facebook:
-  website:
+  website: https://naoya-takeda.netlify.app/about
   location: Brisbane
   profile_image: img/blog-index.jpg
