--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-remark-prismjs": "3.5.2",
     "gatsby-remark-responsive-iframe": "2.4.3",
     "gatsby-remark-smartypants": "2.3.2",
+    "gatsby-remark-sub-sup": "^1.0.0",
     "gatsby-source-filesystem": "2.3.8",
     "gatsby-transformer-json": "2.4.3",
     "gatsby-transformer-remark": "2.8.13",
